@@ -42,7 +42,7 @@ extern int config_no_project_timeout;
  * periodic save-thyself. */
 extern int config_autosave_period;
 
-void zero_on_rollover (time_t now);
+gint zero_daily_counters (gpointer data);
 void set_last_reset (time_t last);
 
 void gen_start_timer(void);
